--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="end"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:weightSum="2">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_margin="4dp"
         app:cardBackgroundColor="@color/white"
+        android:layout_gravity="end"
         android:elevation="4dp"
         app:cardCornerRadius="8dp">
 
@@ -20,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
+            android:text="jiogejriogjieiogjreiogjeojgoeeogj"
             android:textColor="@android:color/black"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
