--- a/app/src/main/res/layout/layout_cmt.xml
+++ b/app/src/main/res/layout/layout_cmt.xml
@@ -55,6 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:progressTint="#93BC66"
+            android:isIndicator="true"
             android:rating="1.7"
             android:stepSize="0.1"
             app:layout_constraintStart_toStartOf="parent"
