little update in chat agent, add location map based on latitude and longitude

--- a/app/src/main/res/layout/activity_detail_local.xml
+++ b/app/src/main/res/layout/activity_detail_local.xml
@@ -194,7 +194,7 @@
                         style="?android:attr/ratingBarStyleSmall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:progressTint="#FFE500"
+                        android:progressTint="#93BC66"
                         android:isIndicator="true"
                         android:rating="4.8"
                         android:stepSize="0.1" />
@@ -260,7 +260,7 @@
                         android:layout_weight="1"
                         android:progress="86"
                         android:progressBackgroundTint="#D7D7D7"
-                        android:progressTint="#FFE500" />
+                        android:progressTint="#93BC66" />
 
                     <ProgressBar
                         android:id="@+id/progress4Star"
@@ -271,7 +271,7 @@
                         android:layout_weight="1"
                         android:progress="75"
                         android:progressBackgroundTint="#D7D7D7"
-                        android:progressTint="#FFE500" />
+                        android:progressTint="#93BC66" />
 
                     <ProgressBar
                         android:id="@+id/progress3Star"
@@ -282,7 +282,7 @@
                         android:layout_weight="1"
                         android:progress="50"
                         android:progressBackgroundTint="#D7D7D7"
-                        android:progressTint="#FFE500" />
+                        android:progressTint="#93BC66" />
 
                     <ProgressBar
                         android:id="@+id/progress2Star"
@@ -293,7 +293,7 @@
                         android:layout_weight="1"
                         android:progress="30"
                         android:progressBackgroundTint="#D7D7D7"
-                        android:progressTint="#FFE500" />
+                        android:progressTint="#93BC66" />
 
                     <ProgressBar
                         android:id="@+id/progress1Star"
@@ -303,7 +303,7 @@
                         android:layout_weight="1"
                         android:progress="10"
                         android:progressBackgroundTint="#D7D7D7"
-                        android:progressTint="#FFE500" />
+                        android:progressTint="#93BC66" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -353,7 +353,8 @@
                 android:id="@+id/feedbackRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:progressTint="#FFE500"
+                android:progressTint="#93BC66"
+                android:stepSize="1"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
