--- a/app/src/main/res/layout/layout_chatbox_locations.xml
+++ b/app/src/main/res/layout/layout_chatbox_locations.xml
@@ -1,16 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="250dp"
     android:layout_height="wrap_content"
     android:gravity="start"
     android:padding="8dp"
     android:weightSum="2">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_margin="4dp"
         app:cardBackgroundColor="#80D9D9D9"
         android:elevation="4dp"
@@ -38,4 +38,11 @@
             android:textColor="#000000"
             android:textSize="13sp" />
     </androidx.cardview.widget.CardView>
+
+    <!-- Container for the map -->
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="8dp"/>
 </LinearLayout>
