--- a/app/src/main/res/layout/layout_cmt.xml
+++ b/app/src/main/res/layout/layout_cmt.xml
@@ -30,7 +30,7 @@
 
     <TextView
         android:id="@+id/tvTime"
-        android:layout_width="42dp"
+        android:layout_width="wrap_content"
         android:layout_height="14dp"
         android:fontFamily="@font/kufam"
         android:text="2 days ago"
