--- a/app/src/main/res/layout/activity_avatar_dialog.xml
+++ b/app/src/main/res/layout/activity_avatar_dialog.xml
@@ -49,6 +49,7 @@
         android:layout_height="179dp"
         android:layout_marginTop="70dp"
         android:background="#CEE9BE"
+        android:scaleType="centerCrop"
         app:circularflow_radiusInDP="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
