--- a/app/src/main/res/layout/activity_locations.xml
+++ b/app/src/main/res/layout/activity_locations.xml
@@ -31,21 +31,23 @@
             app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
             app:layout_constraintTop_toTopOf="@+id/imgbtnGoback" />
 
-        <SearchView
-            android:id="@+id/etSearchLocation"
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="50dp"
-            android:background="@drawable/semiround_button"
-            android:backgroundTint="#D9D9D9"
-            android:inputType="text"
-            android:paddingVertical="5dp"
-            android:textAlignment="textStart"
-            android:textColorHint="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
-            app:layout_constraintTop_toBottomOf="@+id/textView44" />
+    <SearchView
+        android:id="@+id/etSearchLocation"
+        android:layout_width="0dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/semiround_button"
+        android:backgroundTint="#D9D9D9"
+        android:inputType="text"
+        android:paddingVertical="5dp"
+        android:textAlignment="textStart"
+        android:textColorHint="#000000"
+        android:queryHint="Search city"
+        android:iconifiedByDefault="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgbtnGoback"
+        app:layout_constraintTop_toBottomOf="@+id/textView44" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -109,21 +111,21 @@
                 app:layout_constraintStart_toEndOf="@+id/tvTrending"
                 app:layout_constraintTop_toTopOf="@+id/tvTrending" />
 
-            <TextView
-                android:id="@+id/tvFavorite"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:background="@drawable/background_selector"
-                android:clickable="true"
-                android:focusable="true"
-                android:fontFamily="@font/kufam"
-                android:text="Favorite"
-                android:textColor="@drawable/color_selector"
-                android:textSize="13dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tvTopyear"
-                app:layout_constraintStart_toEndOf="@+id/tvTopyear"
-                app:layout_constraintTop_toTopOf="@+id/tvTopyear" />
+<!--            <TextView-->
+<!--                android:id="@+id/tvFavorite"-->
+<!--                android:layout_width="80dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:gravity="center"-->
+<!--                android:background="@drawable/background_selector"-->
+<!--                android:clickable="true"-->
+<!--                android:focusable="true"-->
+<!--                android:fontFamily="@font/kufam"-->
+<!--                android:text="Favorite"-->
+<!--                android:textColor="@drawable/color_selector"-->
+<!--                android:textSize="13dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/tvTopyear"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/tvTopyear"-->
+<!--                app:layout_constraintTop_toTopOf="@+id/tvTopyear" />-->
 
         </LinearLayout>
 
