--- a/app/src/main/res/layout/item_received_message.xml
+++ b/app/src/main/res/layout/item_received_message.xml
@@ -9,12 +9,12 @@
     android:weightSum="2">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="4dp"
-        app:cardBackgroundColor="@color/black"
+        android:layout_marginEnd="100dp"
+        android:layout_marginVertical="4dp"
         android:elevation="4dp"
+        app:cardBackgroundColor="@color/black"
         app:cardCornerRadius="8dp">
 
         <TextView
@@ -22,6 +22,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
