--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -9,13 +9,13 @@
     android:weightSum="2">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="4dp"
-        app:cardBackgroundColor="@color/white"
-        android:layout_gravity="end"
+        android:layout_marginLeft="100dp"
+        android:layout_marginVertical="4dp"
         android:elevation="4dp"
+        android:gravity="end"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="8dp">
 
         <TextView
@@ -23,6 +23,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
