--- a/app/src/main/res/layout/layout_item_locations.xml
+++ b/app/src/main/res/layout/layout_item_locations.xml
@@ -6,12 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:paddingVertical="20dp"
-    android:paddingHorizontal="10dp">
+    android:paddingHorizontal="5dp">
 
     <ImageView
         android:id="@+id/imageLocation"
-        android:layout_width="94dp"
-        android:layout_height="119dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,34 +50,22 @@
         android:textColor="#80000000"
         android:maxLines="5"
         android:text="Located in Sa Pa, 6.1 km from Fansipan Legend Cable Car Station, Pao's Sapa Leisure Hotel provides accommodation with a fitness centre, free private parking, a garden and a shared lounge. Among the facilities of this property are a restaurant, a kids' club and room service, along with free WiFi. The accommodation offers a 24-hour front desk, a concierge service and currency exchange for guests."
-        android:textSize="8sp"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/locationRating"
         app:layout_constraintTop_toBottomOf="@+id/locationRating" />
 
     <TextView
         android:id="@+id/tvLocationPrice"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kufam_bold"
         android:text="VND 1,872,000"
+        android:gravity="right"
         android:textColor="#8DC989"
-        android:textSize="10sp"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tvContent"
         app:layout_constraintTop_toBottomOf="@+id/tvContent" />
-
-<!--    <TextView-->
-<!--        android:id="@+id/tvShowMore"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:fontFamily="@font/kufam_bold"-->
-<!--        android:textColor="#000000"-->
-<!--        android:clickable="true"-->
-<!--        android:text="Show more"-->
-<!--        android:textSize="10sp"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/tvContent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/tvContent" />-->
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
