--- a/app/src/main/res/layout/activity_avatar_dialog.xml
+++ b/app/src/main/res/layout/activity_avatar_dialog.xml
@@ -106,7 +106,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btnUpload" />
 
         <Button
-            android:id="@+id/btnSave"
+            android:id="@+id/btnAdd"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
