--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -157,12 +157,15 @@
 
     <Button
         android:id="@+id/btnAddStatus"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#93BC66"
-        android:text="New status"
+        android:text="What's on your mind ?"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
+        android:backgroundTint="#D9D9D9"
+        android:textColor="#80000000"
+        app:layout_constraintEnd_toStartOf="@+id/guideline10"
         app:layout_constraintStart_toStartOf="@+id/username"
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
