--- a/app/src/main/res/layout/layout_status_grid.xml
+++ b/app/src/main/res/layout/layout_status_grid.xml
@@ -14,6 +14,7 @@
         android:layout_height="75dp"
         android:layout_marginTop="10dp"
         android:background="#CEE9BE"
+        android:scaleType="centerCrop"
         app:circularflow_radiusInDP="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
