--- a/app/src/main/res/layout/activity_list_status.xml
+++ b/app/src/main/res/layout/activity_list_status.xml
@@ -25,6 +25,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:background="#DADADA"
+        android:scaleType="centerCrop"
         app:circularflow_radiusInDP="20dp"
         app:layout_constraintStart_toStartOf="@+id/imgbtnGoback"
         app:layout_constraintTop_toBottomOf="@+id/imgbtnGoback"
