--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -41,7 +41,6 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/shape_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgbtnGoback">
 
@@ -74,8 +73,8 @@
             android:id="@+id/edtUsername"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:background="@drawable/semiround_button"
-            android:backgroundTint="#EEEEEE"
+            android:background="#EEEEEE"
+            android:elevation="2dp"
             android:paddingLeft="10dp"
             android:ems="10"
             android:fontFamily="@font/kufam"
@@ -102,8 +101,8 @@
             android:id="@+id/edtPhone"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:background="@drawable/semiround_button"
-            android:backgroundTint="#EEEEEE"
+            android:background="#EEEEEE"
+            android:elevation="2dp"
             android:ems="10"
             android:fontFamily="@font/kufam"
             android:hint="0987 123 456"
@@ -129,8 +128,8 @@
             android:id="@+id/edtPassword"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:background="@drawable/semiround_button"
-            android:backgroundTint="#EEEEEE"
+            android:background="#EEEEEE"
+            android:elevation="2dp"
             android:ems="10"
             android:hint="A-Z, a-z, 0-9"
             android:inputType="textPassword"
@@ -154,8 +153,8 @@
             android:id="@+id/edtConfirmPassword"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:background="@drawable/semiround_button"
-            android:backgroundTint="#EEEEEE"
+            android:background="#EEEEEE"
+            android:elevation="2dp"
             android:ems="10"
             android:hint="A-Z, a-z, 0-9"
             android:inputType="textPassword"
@@ -175,16 +174,15 @@
             app:layout_constraintStart_toStartOf="@+id/edtConfirmPassword"
             app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword" />
 
-        <EditText
+        <Button
             android:id="@+id/edtBirthday"
+            style="@style/Widget.MaterialComponents.Button"
             android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:background="@drawable/semiround_button"
+            android:layout_height="60dp"
             android:backgroundTint="#EEEEEE"
-            android:ems="10"
-            android:hint="dd/MM/yyyy"
-            android:inputType="text"
-            android:paddingLeft="10dp"
+            android:gravity="center_vertical"
+            android:text="dd/MM/yyyy"
+            android:textColor="#80000000"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/textView14"
             app:layout_constraintTop_toBottomOf="@+id/textView14" />
