--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -19,12 +19,12 @@
         android:id="@+id/nextButton"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="132dp"
         android:background="@drawable/round_button"
         android:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1"
         app:srcCompat="@drawable/arrow_right" />
 
     <TextView
