--- a/app/src/main/res/layout/activity_detail_local.xml
+++ b/app/src/main/res/layout/activity_detail_local.xml
@@ -373,6 +373,7 @@
                 android:id="@+id/lvComment"
                 android:layout_width="0dp"
                 android:layout_height="500dp"
+                android:scrollbars="none"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
