--- a/app/src/main/res/layout/layout_chatbox_locations.xml
+++ b/app/src/main/res/layout/layout_chatbox_locations.xml
@@ -6,12 +6,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:maxWidth="330dp"
     android:background="@drawable/black_button"
     android:backgroundTint="#000000"
+    android:layout_marginStart="8dp"
+    android:elevation="4dp"
     android:gravity="start"
     android:padding="8dp">
 
-    <TextView
+        <TextView
         android:id="@+id/textMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
