--- a/app/src/main/res/layout/activity_newpassword.xml
+++ b/app/src/main/res/layout/activity_newpassword.xml
@@ -111,12 +111,12 @@
         app:layout_constraintTop_toBottomOf="@+id/etVerify"/>
 
     <Button
-        android:id="@+id/btnSignin"
+        android:id="@+id/btnVerify"
         android:layout_width="234dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#000000"
-        android:text="Sign In"
+        android:text="Verify"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/etPassword"
